--- a/plugins.html
+++ b/plugins.html
@@ -442,6 +442,8 @@
                 </p>
                 <div class="plugin-tags">
                     <span class="plugin-tag">Callout</span>
+                    <span class="plugin-tag">Sandy Shores</span>
+                    <span class="plugin-tag">Realism</span>
                 </div>
                 <div class="plugin-actions">
                     <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/51062-tacsims-casual-callouts/?tab=comments"
@@ -454,50 +456,53 @@
             <!-- Plugin 2: Example Script Plugin -->
             <div class="plugin-card" data-category="Script">
                 <div class="plugin-header">
-                    <div class="plugin-icon">⚙️</div>
+                    <div class="plugin-icon">🔫</div>
                     <div>
-                        <div class="plugin-title">Enhanced Traffic System</div>
+                        <div class="plugin-title">Active Shooter Callout Pack</div>
                     </div>
-                    <div class="plugin-version">v2.1.0</div>
+                    <div class="plugin-version">v2.5.0</div>
                 </div>
                 <p class="plugin-description">
-                    A comprehensive traffic management system that enhances AI behavior, adds realistic traffic
-                    patterns, and improves overall road dynamics. Features dynamic traffic density, weather-based
-                    behavior changes, and improved emergency vehicle response.
+                    The Active Shooter Callout Pack brings high-risk critical incidents to LSPDFR, focusing on realism,
+                    urgency, and immersive scene handling.
+                    Developed by TACSIMS, this pack challenges players to secure areas, neutralize threats, and manage
+                    civilians across multiple environments.
                 </p>
                 <div class="plugin-tags">
-                    <span class="plugin-tag">Script</span>
-                    <span class="plugin-tag">Traffic</span>
+                    <span class="plugin-tag">Callout</span>
+                    <span class="plugin-tag">Fun</span>
+
                 </div>
                 <div class="plugin-actions">
-                    <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/" class="plugin-button secondary"
-                        target="_blank">LCPDFR.com</a>
-                    <a href="#" class="plugin-button">Download</a>
+                    <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/50931-active-shooter-callout-pack/"
+                        class="plugin-button secondary" target="_blank">LCPDFR.com</a>
+                    <a href="https://cdn.discordapp.com/attachments/1365438572752015412/1373737398772568194/TACSIMS_AS.zip?ex=683fef66&is=683e9de6&hm=4c15a0cc17ef69c04dbcf1b31e665cd4b13f9a36786329506fc68774d59de436&"
+                        class="plugin-button">Download</a>
                 </div>
-            </div>
+            </div>  
 
             <!-- Plugin 3: Another Callout Example -->
             <div class="plugin-card" data-category="Callout">
                 <div class="plugin-header">
-                    <div class="plugin-icon">🚨</div>
+                    <div class="plugin-icon">💥</div>
                     <div>
-                        <div class="plugin-title">Urban Response Callouts</div>
+                        <div class="plugin-title">Realistic Reactions</div>
                     </div>
-                    <div class="plugin-version">v1.8.3</div>
+                    <div class="plugin-version">2.0.0</div>
                 </div>
                 <p class="plugin-description">
-                    High-intensity urban callouts featuring bank robberies, hostage situations, and gang-related
-                    incidents. Designed for experienced officers looking for challenging scenarios with multiple outcome
-                    possibilities and advanced AI interactions.
+                    Real Reactions introduces subtle but immersive NPC behavior: peds stumble, drop weapons, and react
+                    to injuries based on where they're hit. Whether it's an arm shot or a taser hit, expect responses
+                    that bring the world to life without being over-the-top.
                 </p>
                 <div class="plugin-tags">
                     <span class="plugin-tag">Callout</span>
                     <span class="plugin-tag">Urban</span>
                 </div>
                 <div class="plugin-actions">
-                    <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/" class="plugin-button secondary"
+                    <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/50806-realistic-reactions/" class="plugin-button secondary"
                         target="_blank">LCPDFR.com</a>
-                    <a href="#" class="plugin-button">Download</a>
+                    <a href="https://cdn.discordapp.com/attachments/1365663562453749761/1379533180385628364/RealReactionsV2.0.0.zip?ex=684095e4&is=683f4464&hm=a4467be077ba6e63da6d55d817adc5effa4c554e5712f33b4f71db22a4736f4d&" class="plugin-button">Download</a>
                 </div>
             </div>
         </div>
