--- a/about.html
+++ b/about.html
@@ -470,7 +470,11 @@
         <section class="hero-section">
             <div class="hero-logo">TACSIM STUDIOS</div>
             <p class="hero-text">
-                Yea we make plugins
+               TACSIM Studios is a small, passionate team focused on crafting immersive, story-driven experiences with a strong commitment to quality, realism, and creativity. What began as a simple idea to bring more grounded, believable scenarios to virtual worlds has evolved into a collaborative effort dedicated to building thoughtful, engaging content.
+
+We’re fueled by our love for storytelling, systems design, and creating experiences that resonate with players. Our projects are designed to feel authentic centered around real-world dynamics, meaningful choices, and immersive narrative elements. Every project we work on is built with care, attention to detail, and a shared vision of delivering something truly impactful.
+
+Whether you’re a long-time gamer or someone exploring new experiences, TACSIM is here to make every moment feel more dynamic, more human, and more engaging. We’re more than just a team—we’re a community of creators shaped by passion, player feedback, and the belief that gameplay can always be deeper and more meaningful.
             </p>
         </section>
 
@@ -490,7 +494,7 @@
         <section class="origin-section">
             <h2 class="section-title">How We Came Together</h2>
             <p class="origin-text">
-                Yea idk mamba
+               Tacism Studios came together organically from the ULSS community, where members were passionate about expanding the variety of immersive LSPDFR callouts. The demand sparked the formation of a dev team when sols, an early contributor, took the lead in organizing the project. Shortly after, Dr. Mamba joined the effort, followed by Maminka, a well-known figure in the community for providing tech support. The team grew stronger, and after a few collaborative development cycles, sols stepped down as lead developer. Dr. Mamba assumed the leadership role, with Maminka stepping into an executive management position to keep operations smooth and focused. With the release of their first callout pack, interest in the community grew quickly. That success drew the attention of Demon Hunter, another talented developer, who was brought onto the team after a careful review of their work. Since then, Tacism Studios has continued expanding with new ideas, improved stability, and a shared goal of raising the standard for immersive law enforcement gameplay in GTA V.
             </p>
 
         </section>
@@ -503,30 +507,35 @@
                     <div class="team-photo">
                         <div class="team-photo-placeholder">👨‍💻</div>
                     </div>
-                    <div class="team-name">mamba</div>
+                    <div class="team-name">Dr. Mamba</div>
                     <div class="team-role">Lead Developer & Founder</div>
                     <div class="team-bio">
-                        Knows his stuff, leaks fedex stuff
+                       Hey everyone, I’m Dr. Mamba one of the lead developers here at Tacism Studios. I’m currently studying cybersecurity full time while working in an IT role, while my hobbies are taking long walks/hikes.
+
+I’ve loved GTA V since the day it dropped, and LSPDFR completely changed the game for me. There’s just something about stepping into the role of an officer, responding to dynamic calls, and making each patrol feel like an episode of a gritty police drama it’s chef’s kiss. Joining this project has been a blast, and I’m excited to help bring more immersive, realistic, and meaningful callouts to the community.
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-photo">
-                        <div class="team-photo-placeholder">👨‍💻</div>
+                        <div class="team-photo-placeholder">✈️</div>    
                     </div>
-                    <div class="team-name">minka</div>
-                    <div class="team-role">Dev</div>
+                    <div class="team-name">Maminka</div>
+                    <div class="team-role">Developer</div>
                     <div class="team-bio">
-                        Idk does smth
+                       Heya! I’m Maminka, one of the developers at TACSIM Studios. My journey here kicked off with a simple “sure,” and it’s grown into one of the most rewarding experiences I’ve had. I’ve had the chance to be involved in just about everything from core development to experimental features.
+Working with such a dedicated and creative team has been nothing short of inspiring, and I’m excited for everything we’re building both now and in the future. There’s a lot more to come, and I’m all in.
                     </div>
                 </div>
                 <div class="team-card">
                     <div class="team-photo">
-                        <div class="team-photo-placeholder">👨‍💻</div>
+                        <div class="team-photo-placeholder">👨‍🏭 </div>
                     </div>
-                    <div class="team-name">albman</div>
-                    <div class="team-role">Dev</div>
+                    <div class="team-name">Demon_Hunter</div>
+                    <div class="team-role">Developer</div>
                     <div class="team-bio">
-                        Most ambitious I've ever seen
+                        Hey, I’m demon_hunter one of the devs here at TACSIM Studios. I joined the team recently and have been diving straight into development, helping refine and expand the callouts you see in the pack. I’ve been working behind the scenes to test, clean up bugs, and support the team wherever I can.
+
+I’m all about building immersive experiences and making sure everything feels smooth and believable for players. Really excited to be part of a team that cares about doing things right.
                     </div>
                 </div>
 
