--- a/plugins.html
+++ b/plugins.html
@@ -496,8 +496,8 @@
                     that bring the world to life without being over-the-top.
                 </p>
                 <div class="plugin-tags">
-                    <span class="plugin-tag">Callout</span>
-                    <span class="plugin-tag">Urban</span>
+                    <span class="plugin-tag">Script</span>
+                    <span class="plugin-tag">Realism</span>
                 </div>
                 <div class="plugin-actions">
                     <a href="https://www.lcpdfr.com/downloads/gta5mods/scripts/50806-realistic-reactions/" class="plugin-button secondary"
